--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "gulp-webp": "^4.0.1",
     "posthtml-include": "^1.2.0",
     "readable-stream": "^3.3.0",
-    "stylelint": "9.10.x",
+    "stylelint": "^10.0.1",
     "stylelint-config-htmlacademy": "0.1.x"
   },
   "scripts": {
@@ -48,5 +48,9 @@
   ],
   "engines": {
     "node": "8.15"
+  },
+  "dependencies": {
+    "deep-extend": "^0.6.0",
+    "merge": "^1.2.1"
   }
 }
